# quantfinlib

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.md  conf.py  index.rst  make.bat  pyproject.toml  setup.cfg
.github/workflows/: deploy.yml  tests.yml
config/logger/: base.yaml
docs/: conf.py  index.rst
docs/notebook_links/: random_walk.nblink
docs/source/: conf.py  index.rst  installation.md  toc_example_datasets.rst  toc_example_train_test_split.rst  toc_examples_sim.rst
examples/feature/: example_indicators.ipynb
examples/portfolio/: minimum_variance.ipynb
examples/sim/: bootstrap_ou_params.ipynb  design_test_sim.ipynb  mv_gbm_eq.ipynb  nll_bm.ipynb  random_walk.ipynb  sim_indicators.ipynb
examples/train-test-split/: cross_validation.ipynb
quantfinlib/: __init__.py
quantfinlib/_datatypes/: timeseries.py
quantfinlib/clustering/: __init__.py  hierarchical.py  metrics.py
quantfinlib/datasets/: __init__.py  _dataloader.py  dataloader.py
quantfinlib/distance/: __init__.py  correlation.py  distance_matrix.py  information.py  matrix_divergence.py
quantfinlib/feature/: __init__.py
quantfinlib/math/: cov.py
quantfinlib/portfolio/: __init__.py  _base.py  _data.py  minimum_variance.py
quantfinlib/sim/: __init__.py  _base.py  _bm.py  _gbm.py  _ou.py  _quasi_random.py  _quasibm.py  bm.py
quantfinlib/train_test_split/: __init__.py  _base.py  _dtypes.py  combinatorial_cv.py  cross_validation.py  kfoldpe.py  walk_forward.py
quantfinlib/util/: __init__.py  _custom_types.py  _dtypes.py  _fs_utils.py  _inspect.py  _logging.py  _timeseries.py  _validate.py  convert.py  fs_utils.py  inspect.py  logger_config.py  timeseries.py
tests/clustering/: test_hierarchical.py  test_metrics.py
tests/datasets/: test_dataloader.py
tests/distance/: test_correlation.py  test_distance_matrix.py  test_information.py  test_matrix_divergence.py
tests/feature/: test_cumsumtest.py  test_indicators.py  test_price_sequences.py  test_sequential_trade_models.py  test_strategic_trade_models.py
tests/math/: test_cov.py
tests/sim/: sample_type_instances.py  test_sim_base.py  test_sim_base_cor.py  test_sim_bm.py  test_sim_brownian_motion.py  test_sim_brownian_motion_base.py  test_sim_gbm.py  test_sim_ou.py  test_sim_quasi_random.py  test_sim_quasibm.py
tests/train_test_split/: test_base.py  test_cross_validation.py  test_kfoldpe.py  test_walkforward.py
tests/util/: test_fs_utils.py  test_get_project_root.py  test_logger_config.py  test_logging.py  test_timeseries.py  test_validate.py
(+42 files in other folders)
