[tool.poetry]
name = "quantfinlib"
version = "0.0.2"
description = "Fundamental package for quantitative finance with Python."
authors = ["Thijs van den Berg <thijs@sitmo.com>", "Andrejs Fedjajevs <Andrejs.Fedjajevs@shell.com>", "Mohammadjavad Vakili <Mohammadjavad.Vakili@shell.com>", "Nathan de Vries <Nathan.deVries@shell.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^2.0.0"
pandas = "^2.2.2"
matplotlib = "^3.9.0"


[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
black = "^24.4.2"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
